test: tests for checking different suffers